--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Description" content="We help you to find what you deserve!">
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
 
-    <title>Frontend Mentor | Job Listings</title>
+    <title>Education4ol | Company Listing</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
